--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 <div class="container">
     <div class="header">Tic-Tac-Toe</div>
-    <div class="player-turn"></div>
-
+    <div class="player-turn" id="playerTurn"></div>
+    <button class="start-game" id="startGame">Start Game!</button>
     <div class="board" id="board">
         <div class="cell" data-cell></div>
         <div class="cell" data-cell></div>
