--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="cell" data-cell></div>
     </div>
 
-<div class="winning-message id='winningMessage">
+<div class="winning-message" id="winningMessage">
     <div id='winning-message' data-winning-message-text></div>
     <button id="restartButton">Restart</button>
 </div>
